--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@types/figlet": "^1.5.5",
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.14.5",
+    "@types/prompts": "^2.4.2",
     "colors": "^1.4.0",
     "figlet": "^1.5.2",
-    "inquirer": "^9.1.4",
+    "prompts": "^2.4.2",
     "typescript": "^4.9.5"
   }
 }
