--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "devDependencies": {
     "@types/figlet": "^1.5.5",
     "@types/inquirer": "^9.0.3",
+    "@types/minimist": "^1.2.2",
     "@types/node": "^18.14.5",
     "@types/prompts": "^2.4.2",
     "colors": "^1.4.0",
     "figlet": "^1.5.2",
+    "minimist": "^1.2.8",
     "prompts": "^2.4.2",
     "typescript": "^4.9.5"
   }
