--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^18.14.5",
     "@types/prompts": "^2.4.2",
     "colors": "^1.4.0",
+    "commander": "^10.0.0",
     "figlet": "^1.5.2",
     "minimist": "^1.2.8",
     "prompts": "^2.4.2",
