--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "version": "1.0.0",
   "description": "A tool to quickly start a npm library project",
   "bin": {
-    "create-npm-library": "index.js",
-    "cnl": "index.js"
+    "create-library-npm": "./dist/index.js",
+    "cln": "./dist/index.js"
   },
   "files": [
-    "index.js",
-    "dist"
+    "dist",
+    "templates"
   ],
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "dev": "unbuild --stub",
-    "build": "unbuild",
-    "test": "jest"
+    "build": "rimraf dist && tsc --project tsconfig.build.json",
+    "install-cli": "tsc --project tsconfig.build.json && npm i -g",
+    "uninstall-cli": "npm uninstall create-library-npm -g"
   },
   "keywords": [
+    "create-library",
     "create-npm-library",
     "create library",
     "npm",
@@ -34,6 +35,8 @@
     "commander": "^10.0.0",
     "figlet": "^1.5.2",
     "prompts": "^2.4.2",
+    "rimraf": "^4.4.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
