--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,20 @@
 {
-  "include": ["build.config.ts", "src", "tests"],
+  "ts-node": {
+    "files": true
+  },
   "compilerOptions": {
-    "outDir": "dist",
     "target": "ES2020",
-    "module": "ES2020",
-    "moduleResolution": "Node",
+    "module": "commonjs",
+    "lib": ["ES2020"],
     "strict": true,
+    "sourceMap": true,
+    "declaration": true,
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "skipLibCheck": true,
-    "declaration": false,
-    "sourceMap": false,
-    "noUnusedLocals": true,
+    "outDir": "dist",
     "esModuleInterop": true
-  }
+  },
+  "include": ["src"]
 }
