--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "create-library-npm",
   "version": "1.0.0",
   "description": "A tool to quickly start a npm library project",
+  "author": "Bastian Perez",
+  "license": "MIT",
   "bin": {
     "create-library-npm": "./dist/index.js",
     "cln": "./dist/index.js"
@@ -13,7 +15,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "rimraf dist && tsc --project tsconfig.build.json",
-    "install-cli": "tsc --project tsconfig.build.json && npm i -g",
+    "install-cli": "npm run build && npm i -g",
     "uninstall-cli": "npm uninstall create-library-npm -g"
   },
   "keywords": [
@@ -25,8 +27,6 @@
     "cli",
     "typescript"
   ],
-  "author": "Bastian Perez",
-  "license": "MIT",
   "devDependencies": {
     "@types/figlet": "^1.5.5",
     "@types/node": "^18.14.5",
