--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "rimraf dist && tsc --project tsconfig.build.json",
     "install-cli": "npm run build && npm i -g",
+    "test": "jest",
     "uninstall-cli": "npm uninstall create-library-npm -g"
   },
   "keywords": [
@@ -29,13 +30,19 @@
   ],
   "devDependencies": {
     "@types/figlet": "^1.5.5",
-    "@types/node": "^18.14.5",
+    "@types/fs-extra": "^11.0.1",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.15.0",
     "@types/prompts": "^2.4.2",
     "colors": "^1.4.0",
     "commander": "^10.0.0",
+    "execa": "^7.1.0",
     "figlet": "^1.5.2",
+    "fs-extra": "^11.1.0",
+    "jest": "^29.5.0",
     "prompts": "^2.4.2",
     "rimraf": "^4.4.0",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
